--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -6,30 +6,25 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_launcher"
+            android:icon="@drawable/ic_home"
             android:title="Home" />
 
         <item
             android:id="@+id/nav_upcoming"
-            android:icon="@drawable/ic_launcher"
+            android:icon="@drawable/ic_upcoming"
             android:title="Upcoming Lessons" />
 
         <item
             android:id="@+id/nav_completed"
-            android:icon="@drawable/ic_launcher"
+            android:icon="@drawable/ic_completed"
             android:title="Completed Lessons" />
     </group>
 
     <item android:title="Account">
         <menu>
             <item
-                android:id="@+id/nav_profile"
-                android:icon="@drawable/default_profile"
-                android:title="Profile" />
-
-            <item
                 android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_launcher"
+                android:icon="@drawable/ic_logout"
                 android:title="Logout" />
         </menu>
     </item>
